# backend/api/internal/handler/sync_photo_service.go
@@ -15,38 +15,32 @@ import (
 )
 
 type customDescriptor struct {
-	method  interface{}
-	useAuth bool
+	method interface{}
 }
 
 func (c *customDescriptor) Method() interface{} {
 	return c.method
 }
 
-type PhotosServiceServer struct {
-	desc.UnimplementedPhotosServiceServer
+type SyncPhotosServiceServer struct {
+	desc.UnimplementedSyncPhotosServiceServer
 	server      *server.Server
 	logger      log.Logger
 	cfgProvider config.Provider
 }
 
-func NewPhotosServiceServer(logger log.Logger, cfgProvider config.Provider) *PhotosServiceServer {
-	return &PhotosServiceServer{
+func NewSyncPhotosServiceServer(logger log.Logger, cfgProvider config.Provider) *SyncPhotosServiceServer {
+	return &SyncPhotosServiceServer{
 		logger:      logger,
 		cfgProvider: cfgProvider,
 	}
 }
 
-func (p *PhotosServiceServer) crateServerInterceptors() ([]grpc.UnaryServerInterceptor, error) {
+func (p *SyncPhotosServiceServer) crateServerInterceptors() ([]grpc.UnaryServerInterceptor, error) {
 	descriptors, err := method_descriptor.NewMethodDescriptorMap(
 		[]method_descriptor.Descriptor{
 			&customDescriptor{
-				method:  (*PhotosServiceServer).UploadPhoto,
-				useAuth: false,
-			},
-			&customDescriptor{
-				method:  (*PhotosServiceServer).CheckHashPhoto,
-				useAuth: false,
+				method: (*SyncPhotosServiceServer).UploadPhoto,
 			},
 		},
 	)
@@ -61,7 +55,7 @@ func (p *PhotosServiceServer) crateServerInterceptors() ([]grpc.UnaryServerInter
 	}, nil
 }
 
-func (p *PhotosServiceServer) Start(ctx context.Context) error {
+func (p *SyncPhotosServiceServer) Start(ctx context.Context) error {
 	interceptors, err := p.crateServerInterceptors()
 	if err != nil {
 		return fmt.Errorf("crateServerInterceptors: %w", err)
@@ -75,9 +69,9 @@ func (p *PhotosServiceServer) Start(ctx context.Context) error {
 
 	p.server = server.NewServer(p.logger, serverConfig, interceptors...)
 	serverDs := server.Descriptor{
-		GatewayRegistrar: desc.RegisterPhotosServiceHandlerFromEndpoint,
+		GatewayRegistrar: desc.RegisterSyncPhotosServiceHandlerFromEndpoint,
 		OnRegisterGrpcServer: func(grpcServer *grpc.Server) {
-			desc.RegisterPhotosServiceServer(grpcServer, p)
+			desc.RegisterSyncPhotosServiceServer(grpcServer, p)
 		},
 	}
 
@@ -92,20 +86,11 @@ func (p *PhotosServiceServer) Start(ctx context.Context) error {
 	return nil
 }
 
-func (p *PhotosServiceServer) Stop() {
+func (p *SyncPhotosServiceServer) Stop() {
 	p.server.Stop()
 }
 
-func (p *PhotosServiceServer) CheckHashPhoto(ctx context.Context, request *desc.CheckHashPhotoRequest) (*desc.CheckHashPhotoResponse, error) {
-	return &desc.CheckHashPhotoResponse{
-		AlreadyUploaded: false,
-		UploadedAt: &timestamppb.Timestamp{
-			Seconds: time.Now().Unix(),
-		},
-	}, nil
-}
-
-func (p *PhotosServiceServer) UploadPhoto(ctx context.Context, request *desc.UploadPhotoRequest) (*desc.UploadPhotoResponse, error) {
+func (p *SyncPhotosServiceServer) UploadPhoto(ctx context.Context, request *desc.UploadPhotoRequest) (*desc.UploadPhotoResponse, error) {
 	/*// Извлекаем расширение файла
 	ext := filepath.Ext(request.Paths[0])
 	// Создаем UUID
@@ -129,6 +114,9 @@ func (p *PhotosServiceServer) UploadPhoto(ctx context.Context, request *desc.Upl
 	*/
 	return &desc.UploadPhotoResponse{
 		Success: true,
-		Hash:    "",
+		Hash:    request.Hash,
+		UploadedAt: &timestamppb.Timestamp{
+			Seconds: time.Now().Unix(),
+		},
 	}, nil
 }
