# backend/api/pkg/common/gen/proto/v1/photos_service.pb.gw.go
@@ -31,41 +31,7 @@ var _ = runtime.String
 var _ = utilities.NewDoubleArray
 var _ = metadata.Join
 
-func request_PhotosService_CheckHashPhoto_0(ctx context.Context, marshaler runtime.Marshaler, client PhotosServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq CheckHashPhotoRequest
-	var metadata runtime.ServerMetadata
-
-	newReader, berr := utilities.IOReaderFactory(req.Body)
-	if berr != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
-	}
-	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
-	}
-
-	msg, err := client.CheckHashPhoto(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
-	return msg, metadata, err
-
-}
-
-func local_request_PhotosService_CheckHashPhoto_0(ctx context.Context, marshaler runtime.Marshaler, server PhotosServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq CheckHashPhotoRequest
-	var metadata runtime.ServerMetadata
-
-	newReader, berr := utilities.IOReaderFactory(req.Body)
-	if berr != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
-	}
-	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
-	}
-
-	msg, err := server.CheckHashPhoto(ctx, &protoReq)
-	return msg, metadata, err
-
-}
-
-func request_PhotosService_UploadPhoto_0(ctx context.Context, marshaler runtime.Marshaler, client PhotosServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+func request_SyncPhotosService_UploadPhoto_0(ctx context.Context, marshaler runtime.Marshaler, client SyncPhotosServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq UploadPhotoRequest
 	var metadata runtime.ServerMetadata
 
@@ -82,7 +48,7 @@ func request_PhotosService_UploadPhoto_0(ctx context.Context, marshaler runtime.
 
 }
 
-func local_request_PhotosService_UploadPhoto_0(ctx context.Context, marshaler runtime.Marshaler, server PhotosServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+func local_request_SyncPhotosService_UploadPhoto_0(ctx context.Context, marshaler runtime.Marshaler, server SyncPhotosServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq UploadPhotoRequest
 	var metadata runtime.ServerMetadata
 
@@ -99,13 +65,13 @@ func local_request_PhotosService_UploadPhoto_0(ctx context.Context, marshaler ru
 
 }
 
-// RegisterPhotosServiceHandlerServer registers the http handlers for service PhotosService to "mux".
-// UnaryRPC     :call PhotosServiceServer directly.
+// RegisterSyncPhotosServiceHandlerServer registers the http handlers for service SyncPhotosService to "mux".
+// UnaryRPC     :call SyncPhotosServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
-// Note that using this registration option will cause many gRPC library features to stop working. Consider using RegisterPhotosServiceHandlerFromEndpoint instead.
-func RegisterPhotosServiceHandlerServer(ctx context.Context, mux *runtime.ServeMux, server PhotosServiceServer) error {
+// Note that using this registration option will cause many gRPC library features to stop working. Consider using RegisterSyncPhotosServiceHandlerFromEndpoint instead.
+func RegisterSyncPhotosServiceHandlerServer(ctx context.Context, mux *runtime.ServeMux, server SyncPhotosServiceServer) error {
 
-	mux.Handle("POST", pattern_PhotosService_CheckHashPhoto_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("POST", pattern_SyncPhotosService_UploadPhoto_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		var stream runtime.ServerTransportStream
@@ -113,12 +79,12 @@ func RegisterPhotosServiceHandlerServer(ctx context.Context, mux *runtime.ServeM
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
 		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/pb.v1.PhotosService/CheckHashPhoto", runtime.WithHTTPPathPattern("/v1/photos/check-hash"))
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/pb.v1.SyncPhotosService/UploadPhoto", runtime.WithHTTPPathPattern("/v1/sync-photos/upload"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := local_request_PhotosService_CheckHashPhoto_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		resp, md, err := local_request_SyncPhotosService_UploadPhoto_0(annotatedContext, inboundMarshaler, server, req, pathParams)
 		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
 		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
 		if err != nil {
@@ -126,41 +92,16 @@ func RegisterPhotosServiceHandlerServer(ctx context.Context, mux *runtime.ServeM
 			return
 		}
 
-		forward_PhotosService_CheckHashPhoto_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
-
-	})
-
-	mux.Handle("POST", pattern_PhotosService_UploadPhoto_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
-		ctx, cancel := context.WithCancel(req.Context())
-		defer cancel()
-		var stream runtime.ServerTransportStream
-		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
-		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		var err error
-		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/pb.v1.PhotosService/UploadPhoto", runtime.WithHTTPPathPattern("/v1/photos/upload"))
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-		resp, md, err := local_request_PhotosService_UploadPhoto_0(annotatedContext, inboundMarshaler, server, req, pathParams)
-		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
-		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
-		if err != nil {
-			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
-			return
-		}
-
-		forward_PhotosService_UploadPhoto_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_SyncPhotosService_UploadPhoto_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
 	return nil
 }
 
-// RegisterPhotosServiceHandlerFromEndpoint is same as RegisterPhotosServiceHandler but
+// RegisterSyncPhotosServiceHandlerFromEndpoint is same as RegisterSyncPhotosServiceHandler but
 // automatically dials to "endpoint" and closes the connection when "ctx" gets done.
-func RegisterPhotosServiceHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
+func RegisterSyncPhotosServiceHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
 	conn, err := grpc.DialContext(ctx, endpoint, opts...)
 	if err != nil {
 		return err
@@ -180,63 +121,41 @@ func RegisterPhotosServiceHandlerFromEndpoint(ctx context.Context, mux *runtime.
 		}()
 	}()
 
-	return RegisterPhotosServiceHandler(ctx, mux, conn)
+	return RegisterSyncPhotosServiceHandler(ctx, mux, conn)
 }
 
-// RegisterPhotosServiceHandler registers the http handlers for service PhotosService to "mux".
+// RegisterSyncPhotosServiceHandler registers the http handlers for service SyncPhotosService to "mux".
 // The handlers forward requests to the grpc endpoint over "conn".
-func RegisterPhotosServiceHandler(ctx context.Context, mux *runtime.ServeMux, conn *grpc.ClientConn) error {
-	return RegisterPhotosServiceHandlerClient(ctx, mux, NewPhotosServiceClient(conn))
+func RegisterSyncPhotosServiceHandler(ctx context.Context, mux *runtime.ServeMux, conn *grpc.ClientConn) error {
+	return RegisterSyncPhotosServiceHandlerClient(ctx, mux, NewSyncPhotosServiceClient(conn))
 }
 
-// RegisterPhotosServiceHandlerClient registers the http handlers for service PhotosService
-// to "mux". The handlers forward requests to the grpc endpoint over the given implementation of "PhotosServiceClient".
-// Note: the gRPC framework executes interceptors within the gRPC handler. If the passed in "PhotosServiceClient"
+// RegisterSyncPhotosServiceHandlerClient registers the http handlers for service SyncPhotosService
+// to "mux". The handlers forward requests to the grpc endpoint over the given implementation of "SyncPhotosServiceClient".
+// Note: the gRPC framework executes interceptors within the gRPC handler. If the passed in "SyncPhotosServiceClient"
 // doesn't go through the normal gRPC flow (creating a gRPC client etc.) then it will be up to the passed in
-// "PhotosServiceClient" to call the correct interceptors.
-func RegisterPhotosServiceHandlerClient(ctx context.Context, mux *runtime.ServeMux, client PhotosServiceClient) error {
+// "SyncPhotosServiceClient" to call the correct interceptors.
+func RegisterSyncPhotosServiceHandlerClient(ctx context.Context, mux *runtime.ServeMux, client SyncPhotosServiceClient) error {
 
-	mux.Handle("POST", pattern_PhotosService_CheckHashPhoto_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("POST", pattern_SyncPhotosService_UploadPhoto_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
 		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/pb.v1.PhotosService/CheckHashPhoto", runtime.WithHTTPPathPattern("/v1/photos/check-hash"))
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/pb.v1.SyncPhotosService/UploadPhoto", runtime.WithHTTPPathPattern("/v1/sync-photos/upload"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := request_PhotosService_CheckHashPhoto_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		resp, md, err := request_SyncPhotosService_UploadPhoto_0(annotatedContext, inboundMarshaler, client, req, pathParams)
 		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
 		if err != nil {
 			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
 			return
 		}
 
-		forward_PhotosService_CheckHashPhoto_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
-
-	})
-
-	mux.Handle("POST", pattern_PhotosService_UploadPhoto_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
-		ctx, cancel := context.WithCancel(req.Context())
-		defer cancel()
-		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		var err error
-		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/pb.v1.PhotosService/UploadPhoto", runtime.WithHTTPPathPattern("/v1/photos/upload"))
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-		resp, md, err := request_PhotosService_UploadPhoto_0(annotatedContext, inboundMarshaler, client, req, pathParams)
-		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
-		if err != nil {
-			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
-			return
-		}
-
-		forward_PhotosService_UploadPhoto_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_SyncPhotosService_UploadPhoto_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -244,13 +163,9 @@ func RegisterPhotosServiceHandlerClient(ctx context.Context, mux *runtime.ServeM
 }
 
 var (
-	pattern_PhotosService_CheckHashPhoto_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "photos", "check-hash"}, ""))
-
-	pattern_PhotosService_UploadPhoto_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "photos", "upload"}, ""))
+	pattern_SyncPhotosService_UploadPhoto_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "sync-photos", "upload"}, ""))
 )
 
 var (
-	forward_PhotosService_CheckHashPhoto_0 = runtime.ForwardResponseMessage
-
-	forward_PhotosService_UploadPhoto_0 = runtime.ForwardResponseMessage
+	forward_SyncPhotosService_UploadPhoto_0 = runtime.ForwardResponseMessage
 )
